internal/translator/testdata/weight-shifting/output.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: weight-shifting
  namespace: default
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: s1
      port: 80
      weight: 10
    - name: s2
      port: 80
      weight: 90
  virtualhost:
    fqdn: weights.bar.com
